--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -31,8 +31,12 @@ jobs:
 
       - name: Build image
         run: |
-          ./scripts/build_docker.sh staging ${{ github.event.pull_request.head.sha || github.sha }}
+          ./scripts/build_docker.sh build staging ${{ github.event.pull_request.head.sha || github.sha }}
 
       - name: Test image
         run: |
-          docker run --rm nango:staging
+          docker run --rm nango:staging node packages/runner/dist/app.js
+
+      - name: Push image
+        run: |
+          ./scripts/build_docker.sh push staging ${{ github.event.pull_request.head.sha || github.sha }}
