--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -33,9 +33,9 @@ jobs:
         run: |
           ./scripts/build_docker.sh build staging ${{ github.event.pull_request.head.sha || github.sha }}
 
-      - name: Test image
-        run: |
-          docker run --rm nango:staging timeout 5 sh -c 'node packages/runner/dist/app.js' 2>/dev/null
+      # - name: Test image
+      #   run: |
+      #     docker run --rm nango:staging timeout 5 sh -c 'node packages/runner/dist/app.js' 2>/dev/null
 
       - name: Push image
         run: |
