--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -8,10 +8,12 @@ on:
   pull_request:
 
 jobs:
-  push-container:
+  push-staging-container:
     runs-on: ubuntu-latest
     env:
       CAN_PUSH: '${{ secrets.DOCKER_PASSWORD != '' && secrets.DOCKER_USERNAME != '' }}'
+      SHA: ${{ github.event.pull_request.head.sha || github.sha }}
+
     steps:
       - name: Check out
         uses: actions/checkout@v4
@@ -33,14 +35,64 @@ jobs:
       - name: Expose GitHub Runtime
         uses: crazy-max/ghaction-github-runtime@v2
 
-      - name: Build image
+      - name: Build image (staging)
         run: |
-          ./scripts/build_docker.sh build staging ${{ github.event.pull_request.head.sha || github.sha }}
+          ./scripts/build_docker.sh build staging ${{ env.SHA }}
 
       # - name: Test image
       #   run: |
       #     docker run --rm nangohq/nango:staging timeout 5 sh -c 'node packages/runner/dist/app.js' 2>/dev/null
 
-      - name: Push image
+      - name: Push images
+        if: env.CAN_PUSH == 'true'
         run: |
-          ./scripts/build_docker.sh push staging ${{ github.event.pull_request.head.sha || github.sha }}
+          docker push staging-${{ env.SHA }}
+
+
+  push-other-container:
+    if: github.ref == 'refs/heads/master'
+    runs-on: ubuntu-latest
+    needs: push-staging-container
+    env:
+      CAN_PUSH: '${{ secrets.DOCKER_PASSWORD != '' && secrets.DOCKER_USERNAME != '' }}'
+      SHA: ${{ github.event.pull_request.head.sha || github.sha }}
+
+    steps:
+      - name: Check out
+        uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        if: env.CAN_PUSH == 'true'
+        with:
+          username: '${{ secrets.DOCKER_USERNAME }}'
+          password: '${{ secrets.DOCKER_PASSWORD }}'
+
+      # Needed for buildx gha cache to work
+      - name: Expose GitHub Runtime
+        uses: crazy-max/ghaction-github-runtime@v2
+
+      - name: Build image (prod)
+        run: |
+          ./scripts/build_docker.sh build prod ${{ env.SHA }}
+
+      - name: Build image (hosted)
+        run: |
+          ./scripts/build_docker.sh build hosted ${{ env.SHA }}
+
+      - name: Build image (enterprise)
+        run: |
+          ./scripts/build_docker.sh build enterprise ${{ env.SHA }}
+
+      - name: Push images
+        run: |
+          docker push staging-${{ env.SHA }}
+          docker push hosted-${{ env.SHA }}
+          docker push enterperise-${{ env.SHA }}
+          docker push prod-${{ env.SHA }}
