--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -7,88 +7,22 @@ on:
       - staging/**
   pull_request:
 
+
 jobs:
-  push-staging-container:
-    runs-on: ubuntu-latest
-    env:
-      CAN_PUSH: '${{ secrets.DOCKER_PASSWORD != '' && secrets.DOCKER_USERNAME != '' }}'
-      SHA: ${{ github.event.pull_request.head.sha || github.sha }}
-
-    steps:
-      - name: Check out
-        uses: actions/checkout@v4
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        if: env.CAN_PUSH == 'true'
-        with:
-          username: '${{ secrets.DOCKER_USERNAME }}'
-          password: '${{ secrets.DOCKER_PASSWORD }}'
-
-      # Needed for buildx gha cache to work
-      - name: Expose GitHub Runtime
-        uses: crazy-max/ghaction-github-runtime@v2
-
-      - name: Build image (staging)
-        run: |
-          ./scripts/build_docker.sh build staging ${{ env.SHA }}
-
-      # - name: Test image
-      #   run: |
-      #     docker run --rm nangohq/nango:staging timeout 5 sh -c 'node packages/runner/dist/app.js' 2>/dev/null
-
-      - name: Push images
-        if: env.CAN_PUSH == 'true'
-        run: |
-          docker push nangohq/nango:staging-${{ env.SHA }}
-
-
-  push-other-container:
-    runs-on: ubuntu-latest
-    env:
-      CAN_PUSH: '${{ secrets.DOCKER_PASSWORD != '' && secrets.DOCKER_USERNAME != '' }}'
-      SHA: ${{ github.event.pull_request.head.sha || github.sha }}
-
+  build-image:
     strategy:
       matrix:
-        test-group:
-          [
-            prod,
-            enterprise
-          ]
+        group:
+          - name: 'staging'
+            if: github.ref == 'refs/heads/master'
+          - name: 'prod'
+            if: github.ref == 'refs/heads/master'
+          - name: 'enterprise'
+            if: github.ref == 'refs/heads/master'
 
-    steps:
-      - name: Check out
-        uses: actions/checkout@v4
+    secrets: inherit
+    uses: ./.github/workflows/build-image-reusable.yml
+    with:
+      if: ${{ matrix.group.if }}
+      name: ${{ matrix.group.foo }}
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        if: env.CAN_PUSH == 'true'
-        with:
-          username: '${{ secrets.DOCKER_USERNAME }}'
-          password: '${{ secrets.DOCKER_PASSWORD }}'
-
-      # Needed for buildx gha cache to work
-      - name: Expose GitHub Runtime
-        uses: crazy-max/ghaction-github-runtime@v2
-
-      - name: Build image (${{ matrix.test-group }})
-        run: |
-          ./scripts/build_docker.sh build ${{ matrix.test-group }} ${{ env.SHA }}
-
-      - name: Push images
-        if: env.CAN_PUSH == 'true'
-        run: |
-          docker push nangohq/nango:${{ matrix.test-group }}-${{ env.SHA }}
