[nan-374] add Date and additional test

--- a/packages/cli/lib/fixtures/nango-yaml/v2/mixed-types/nango.yaml
+++ b/packages/cli/lib/fixtures/nango-yaml/v2/mixed-types/nango.yaml
@@ -18,6 +18,7 @@ models:
     und: string | undefined | null
     def: male | string | undefined | null
     reference: Other[]
+    nullableDate: Date | null
   Other:
     id: string
     yes: number
