--- a/packages/webapp/tsconfig.json
+++ b/packages/webapp/tsconfig.json
@@ -26,6 +26,9 @@
     "references": [
         {
             "path": "../frontend"
+        },
+        {
+            "path": "../server"
         }
     ],
     "include": [
