--- a/packages/shared/flows.yaml
+++ b/packages/shared/flows.yaml
@@ -3,7 +3,7 @@ integrations:
     actions:
       algolia-create-contacts:
         description: |
-            Action to add a single record contact to an index
+          Action to add a single record contact to an index
         output: AlgoliaContact
         input: AlgoliaCreateContactInput
         endpoint: POST /algolia/create-contacts
@@ -429,7 +429,7 @@ integrations:
         scopes: public_repo
         description: |
           Fetches GitHub issues from our showcase repository.
-        endpoint: /github/demo-issues
+        endpoint: GET /github/demo-issues
     actions:
       github-write-file:
         scopes: repo
@@ -448,6 +448,8 @@ integrations:
           List github repos from an organization.
       github-issues-demo-action:
         endpoint: POST /github/demo-write-issue
+        input: GithubWriteIssueInput
+        output: GithubWriteIssueResult
         description: |
           Create a GitHub issue in Nango's showcase repository.
     models:
@@ -508,6 +510,11 @@ integrations:
         id: integer
         title: string
         url: string
+      GithubWriteIssueInput:
+        title: string
+      GithubWriteIssueResult:
+        url: string | undefined
+        status: number
   google-calendar:
     syncs:
       google-calendar-events:
