--- a/integration-templates/ashby/nango.yaml
+++ b/integration-templates/ashby/nango.yaml
@@ -8,8 +8,7 @@ integrations:
           Fetches a list of all candidates from your ashby account
         metadata:
           description: |
-            Since Ashby doesn't use a lastSyncDate value to increment its sync,
-            we need to store a candidatelastsyncToken which will be used to increment the candidates syncs
+            We need to save a candidatelastsyncToken to track and update candidates' synchronizations
           scopes: candidatelastsyncToken
         sync_type: incremental
         endpoint: /ashby/candidates
@@ -20,8 +19,7 @@ integrations:
           Fetches a list of all jobs from your ashby account
         metadata:
           description: |
-            Since Ashby doesn't use a lastSyncDate value to increment its sync,
-            we need to store a jobslastsyncToken which will be used to increment the jobs syncs
+            We need to save a jobslastsyncToken to track and update jobs' synchronizations
           scopes: jobslastsyncToken
         sync_type: incremental
         endpoint: /ashby/jobs
