--- a/integration-templates/zendesk/nango.yaml
+++ b/integration-templates/zendesk/nango.yaml
@@ -11,7 +11,7 @@ integrations:
       zendesk-articles:
         runs: every 6 hours
         description: |
-          Fetches a list of articles in Help center
+          Fetches a list of articles in Help center from zendesk
         output: ZendeskArticle
         sync_type: full
         endpoint: /zendesk/articles
