--- a/integration-templates/github/nango.yaml
+++ b/integration-templates/github/nango.yaml
@@ -57,10 +57,10 @@ integrations:
                     - GithubRepo
                 description: |
                     List github repos from an organization.
-            github-issues-demo-action:
-                endpoint: POST /github/demo-write-issue
-                input: GithubWriteIssueInput
-                output: GithubWriteIssueResult
+            github-create-demo-issue:
+                endpoint: POST /github/create-demo-issue
+                input: GithubCreateIssueInput
+                output: GithubCreateIssueResult
                 description: |
                     Create a GitHub issue in Nango's showcase repository.
 models:
@@ -113,8 +113,8 @@ models:
         id: integer
         title: string
         url: string
-    GithubWriteIssueInput:
+    GithubCreateIssueInput:
         title: string
-    GithubWriteIssueResult:
+    GithubCreateIssueResult:
         url: string | undefined
         status: number
