--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "@hapi/boom": "^10.0.1",
         "@nangohq/shared": "^0.39.1",
+        "@propelauth/express": "^2.1.4",
         "axios": "^1.3.4",
         "connect-session-knex": "^3.0.1",
         "cookie-parser": "^1.4.6",
@@ -33,12 +34,14 @@
         "express": "^4.18.2",
         "express-session": "^1.17.3",
         "form-data": "^4.0.0",
+        "install": "^0.13.0",
         "js-yaml": "^4.1.0",
         "jsonwebtoken": "^9.0.2",
         "knex": "^2.3.0",
         "mailgun.js": "^8.2.1",
         "multer": "^1.4.5-lts.1",
         "node-cron": "^3.0.2",
+        "npm": "^10.5.0",
         "oauth": "^0.10.0",
         "passport": "^0.6.0",
         "passport-http": "^0.3.0",
