--- a/.env.example
+++ b/.env.example
@@ -67,3 +67,7 @@ NANGO_TELEMETRY_SDK=false
 # Getting Started configuration
 DEFAULT_GITHUB_CLIENT_ID=
 DEFAULT_GITHUB_CLIENT_SECRET=
+
+# ----- Logs
+# Leave empty to use default Postgres
+NANGO_LOGS_DB_URL=
