--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "@hapi/boom": "^10.0.1",
         "@nangohq/shared": "^0.39.5",
+        "@workos-inc/node": "^6.2.0",
         "axios": "^1.3.4",
         "connect-session-knex": "^3.0.1",
         "cookie-parser": "^1.4.6",
