--- a/.env.example
+++ b/.env.example
@@ -57,6 +57,8 @@ LOG_LEVEL=info
 #
 ###############################################################################
 
+TZ=UTC
+
 # Configure where integrations will be loaded from
 NANGO_INTEGRATIONS_FULL_PATH=
 
