--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -15,6 +15,7 @@
         "directory": "packages/jobs"
     },
     "dependencies": {
+        "@nangohq/nango-jobs": "file:../jobs",
         "@nangohq/nango-runner": "^1.0.0",
         "@nangohq/shared": "^0.39.4",
         "@temporalio/activity": "^1.9.1",
