--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -30,7 +30,7 @@
         "dotenv": "^16.0.3",
         "fs-extra": "^11.1.1",
         "js-yaml": "^4.1.0",
-        "knex": "^2.4.2",
+        "knex": "3.1.0",
         "md5": "^2.3.0",
         "nanoid": "3.x",
         "node-cron": "3.0.3",
