--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -25,7 +25,7 @@
         "@hapi/boom": "^10.0.1",
         "@nangohq/shared": "^0.39.4",
         "axios": "^1.3.4",
-        "connect-session-knex": "^3.0.1",
+        "connect-session-knex": "4.0.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dd-trace": "5.2.0",
@@ -36,7 +36,7 @@
         "form-data": "^4.0.0",
         "js-yaml": "^4.1.0",
         "jsonwebtoken": "^9.0.2",
-        "knex": "^2.3.0",
+        "knex": "3.1.0",
         "mailgun.js": "^8.2.1",
         "multer": "^1.4.5-lts.1",
         "node-cron": "^3.0.2",
