--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -6,14 +6,14 @@
     },
     "references": [
         {
+            "path": "../logs"
+        },
+        {
             "path": "../shared"
         },
         {
             "path": "../node-client"
         }
     ],
-    "include": [
-        "lib/**/*",
-        "../shared/lib/express.d.ts",
-    ]
+    "include": ["lib/**/*", "../shared/lib/express.d.ts"]
 }
