--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -15,6 +15,7 @@
         "directory": "packages/jobs"
     },
     "dependencies": {
+        "@nangohq/nango-jobs": "file:../jobs",
         "@nangohq/nango-runner": "^1.0.0",
         "@nangohq/shared": "^0.39.5",
         "@temporalio/activity": "^1.9.1",
@@ -29,7 +30,7 @@
         "dotenv": "^16.0.3",
         "fs-extra": "^11.1.1",
         "js-yaml": "^4.1.0",
-        "knex": "^2.4.2",
+        "knex": "3.1.0",
         "md5": "^2.3.0",
         "nanoid": "3.x",
         "node-cron": "3.0.3",
