fix(integrations): backfill integration templates (#1833)
## Describe your changes

- Backfill all sync & action integration templates with all their
necessary properties.
- Removed redundant text; Details: full sync, doesn't track deletes,
metadata is not required. and replaced it with actual `nango.yaml`
properties where appropriate; `sync_type`, `track_deletes` and
`metadata` since defaults are false.
- Fix integration docs files
- Added missing provider flows

--- a/integration-templates/google-drive/nango.yaml
+++ b/integration-templates/google-drive/nango.yaml
@@ -29,7 +29,7 @@ integrations:
           into a buffer and return a base64 encoded string that can later
           be converted into a PDF using an external tool.
         output: string
-        endpoint: /google-drive/fetch-pdf
+        endpoint: POST /google-drive/fetch-pdf
         scopes: https://www.googleapis.com/auth/drive.readonly
 models:
   DocumentMetadata:
