--- a/integration-templates/google-workspace/nango.yaml
+++ b/integration-templates/google-workspace/nango.yaml
@@ -7,7 +7,9 @@ integrations:
         output: OrganizationalUnit
         sync_type: full
         endpoint: /google/workspace-org-unit
-        scopes: https://www.googleapis.com/auth/admin.directory.orgunit.readonly,https://www.googleapis.com/auth/admin.directory.user.readonly
+        scopes:
+          - https://www.googleapis.com/auth/admin.directory.orgunit.readonly
+          - https://www.googleapis.com/auth/admin.directory.user.readonly
       google-workspace-users:
         runs: every hour
         output: User
@@ -18,7 +20,9 @@ integrations:
         output: GoogleWorkspaceUserToken
         sync_type: full
         endpoint: /google/workspace-user-access-tokens
-        scopes: https://www.googleapis.com/auth/admin.directory.user.readonly,https://www.googleapis.com/auth/admin.directory.user.security
+        scopes:
+          - https://www.googleapis.com/auth/admin.directory.user.readonly
+          - https://www.googleapis.com/auth/admin.directory.user.security
 models:
   OrganizationalUnit:
     id: string
