--- a/packages/shared/flows.yaml
+++ b/packages/shared/flows.yaml
@@ -470,6 +470,8 @@ integrations:
                     List github repos from an organization.
             github-issues-demo-action:
                 endpoint: POST /github/demo-write-issue
+                input: GithubWriteIssueInput
+                output: GithubWriteIssueResult
                 description: |
                     Create a GitHub issue in Nango's showcase repository.
         models:
@@ -530,6 +532,11 @@ integrations:
                 id: integer
                 title: string
                 url: string
+            GithubWriteIssueInput:
+                title: string
+            GithubWriteIssueResult:
+                url: string | undefined
+                status: number
     google-calendar:
         syncs:
             google-calendar-events:
@@ -2962,6 +2969,32 @@ integrations:
                 endpoint: /zoho-mail/tasks
                 scopes:
                     - ZohoMail.tasks.READ
+            zoho-mail-emails:
+                runs: every 6 hours
+                description: |
+                    Fetches a list of all your account's emails in Zoho mail
+                output: ZohoMailEmail
+                sync_type: full
+                endpoint: /zoho-mail/emails
+                scopes:
+                    - ZohoMail.messages.READ
+        actions:
+            zoho-mail-send-email:
+                description: |
+                    An action to send an email in zoho mail
+                output: ZohoMailSendEmailOutput
+                input: ZohoMailSendEmailInput
+                endpoint: POST /zoho-mail/send-email
+                scopes:
+                    - ZohoMail.messages.CREATE
+            zoho-mail-add-user:
+                description: |
+                    An action to add a user to the organization in zoho mail
+                output: ZohoMailAddUserOutput
+                input: ZohoMailAddUserInput
+                endpoint: POST /zoho-mail/add-user
+                scopes:
+                    - ZohoMail.organization.accounts.CREATE
         models:
             ZohoMailTask:
                 id: string
@@ -2997,3 +3030,49 @@ integrations:
                 serviceUniqId: number
                 depUniqId: string
                 status: string
+            ZohoMailEmail:
+                summary: string
+                sentDateInGMT: string
+                calendarType: number
+                subject: string
+                messageId: string
+                flagid: string
+                status2: string
+                priority: string
+                hasInline: string
+                toAddress: string
+                folderId: string
+                ccAddress: string
+                hasAttachment: string
+                size: string
+                sender: string
+                receivedTime: string
+                fromAddress: string
+                status: string
+            ZohoMailSendEmailInput:
+                accountId: string
+                fromAddress: string
+                toAddress: string
+                ccAddress: string
+                bccAddress: string
+                subject: string
+                encoding: string
+                mailFormat: string
+                askReceipt: string
+            ZohoMailSendEmailOutput:
+                status: object
+                data: object
+            ZohoMailAddUserInput:
+                zoid: number
+                primaryEmailAddress: string
+                password: string
+                displayName: string
+                role: string
+                country: string
+                language: string
+                timeZone: string
+                oneTimePassword: boolean
+                groupMailList: string[]
+            ZohoMailAddUserOutput:
+                status: object
+                data: object
