--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -15,7 +15,7 @@
         "directory": "packages/jobs"
     },
     "dependencies": {
-        "@nangohq/nango-jobs": "file:../jobs",
+        "@nangohq/nango-logs": "file:../logs",
         "@nangohq/nango-runner": "^1.0.0",
         "@nangohq/shared": "^0.39.5",
         "@temporalio/activity": "^1.9.1",
