--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -1,33 +1,31 @@
 name: Build unified Docker image
 
 on:
-  push:
-    branches:
-      - master
-      - staging/**
-  pull_request:
-
+    push:
+        branches:
+            - master
+            - staging/**
+    pull_request:
 
 jobs:
-  build-image:
-    strategy:
-      matrix:
-        group:
-          - name: 'staging'
-            if: true
-            sentry_key: SENTRY_KEY_staging
-          - name: 'prod'
-            if: true
-            sentry_key: SENTRY_KEY_prod
-            posthog_key: POSTHOG_KEY_prod
-          - name: 'enterprise'
-            if: ${{ github.ref == 'refs/heads/master' }}
+    build-image:
+        strategy:
+            matrix:
+                group:
+                    - name: 'staging'
+                      if: true
+                      sentry_key: SENTRY_KEY_staging
+                    - name: 'prod'
+                      if: ${{ github.ref == 'refs/heads/master' }}
+                      sentry_key: SENTRY_KEY_prod
+                      posthog_key: POSTHOG_KEY_prod
+                    # - name: 'enterprise'
+                    #   if: ${{ github.ref == 'refs/heads/master' }}
 
-    secrets: inherit
-    uses: ./.github/workflows/build-image-reusable.yaml
-    with:
-      if: ${{ matrix.group.if }}
-      name: ${{ matrix.group.name }}
-      key_secret_sentry: ${{ matrix.group.sentry_key }}
-      key_secret_posthog: ${{ matrix.group.posthog_key }}
-
+        secrets: inherit
+        uses: ./.github/actions/build-image.yaml
+        with:
+            if: ${{ matrix.group.if }}
+            name: ${{ matrix.group.name }}
+            key_secret_sentry: ${{ matrix.group.sentry_key }}
+            key_secret_posthog: ${{ matrix.group.posthog_key }}
