--- a/.eslintrc
+++ b/.eslintrc
@@ -28,7 +28,10 @@
         "plugin:react/recommended",
         "plugin:react/jsx-runtime",
         "plugin:prettier/recommended",
-        "plugin:react-hooks/recommended"
+        "plugin:react-hooks/recommended",
+        "plugin:import/errors",
+        "plugin:import/warnings",
+        "plugin:import/recommended"
     ],
     "rules": {
         "no-console": 1, // Means warning
@@ -65,6 +68,23 @@
                 "varsIgnorePattern": "^_",
                 "ignoreRestSiblings": true
             }
+        ],
+        "import/extensions": [
+            "error",
+            "always",
+            {
+                "json": "always",
+                "js": "always",
+                "ts": "never",
+                "ignorePackages": true
+            }
+        ],
+        "import/no-unresolved": "off",
+        "@typescript-eslint/consistent-type-imports": [
+            "error",
+            {
+                "prefer": "type-imports"
+            }
         ]
     },
     "overrides": [
@@ -96,7 +116,9 @@
                             "attributes": false
                         }
                     }
-                ]
+                ],
+                // unnecessary when bundling
+                "import/extensions": "off"
             }
         }
     ]
