--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -24,6 +24,8 @@
     },
     "dependencies": {
         "@babel/traverse": "^7.22.5",
+        "@babel/types": "^7.22.5",
+        "@babel/parser": "^7.22.5",
         "@inquirer/prompts": "^2.3.0",
         "@nangohq/shared": "^0.39.5",
         "@vercel/ncc": "^0.36.1",
@@ -39,6 +41,7 @@
         "dotenv": "^16.0.3",
         "ejs": "^3.1.9",
         "figlet": "^1.6.0",
+        "glob": "^10.3.10",
         "js-yaml": "^4.1.0",
         "memfs": "^3.5.1",
         "npm-package-arg": "^10.1.0",
@@ -67,7 +70,8 @@
         "esbuild": "^0.17.19",
         "webpack": "^5.85.1",
         "webpack-cli": "^5.1.3",
-        "webpack-node-externals": "^3.0.0"
+        "webpack-node-externals": "^3.0.0",
+        "vitest": "^1.4.0"
     },
     "engines": {
         "node": ">=16.7"
