--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -42,6 +42,7 @@
         "@types/md5": "^2.3.2",
         "@types/node": "^18.7.6",
         "nodemon": "^3.0.1",
-        "typescript": "^5.3.3"
+        "typescript": "^5.3.3",
+        "vitest": "1.4.0"
     }
 }
