--- a/packages/persist/package.json
+++ b/packages/persist/package.json
@@ -28,6 +28,7 @@
         "@types/mock-knex": "^0.4.8",
         "@types/node": "^18.7.6",
         "node-fetch": "^3.3.2",
-        "typescript": "^5.3.3"
+        "typescript": "^5.3.3",
+        "vitest": "1.4.0"
     }
 }
