--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -25,6 +25,7 @@
         "@hapi/boom": "^10.0.1",
         "@nangohq/shared": "^0.39.5",
         "axios": "^1.3.4",
+        "body-parser": "1.20.2",
         "connect-session-knex": "4.0.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
@@ -74,6 +75,7 @@
         "@types/uuid": "^8.3.4",
         "@types/ws": "^8.5.4",
         "nodemon": "^3.0.1",
-        "typescript": "^5.3.3"
+        "typescript": "^5.3.3",
+        "vitest": "1.4.0"
     }
 }
