--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -34,6 +34,7 @@
         "dd-trace": "5.2.0",
         "ejs": "^3.1.5",
         "exponential-backoff": "^3.1.1",
+        "form-data": "4.0.0",
         "fs-extra": "^11.1.1",
         "human-to-cron": "^0.3.1",
         "ip": "^2.0.1",
@@ -72,6 +73,7 @@
         "@types/node": "^18.7.6",
         "@types/parse-link-header": "^2.0.0",
         "@types/uuid": "^9.0.0",
-        "typescript": "^5.3.3"
+        "typescript": "^5.3.3",
+        "vitest": "1.4.0"
     }
 }
