fix(eslint): pass #7 (#1874)
## Describe your changes

- Add `eslint-plugin-import` to catch unspecified extension, missing
packages and others stuff.
This has caught a few issues here in there already.

- Enable `@typescript-eslint/consistent-type-imports`, it's important to
let Typescript removes types from the imports/exports. Not mixing make
them explicit and can be automatically hidden from IDE
Note: that I haven't fixed all errors to avoid a too big PR but it's
will be autofixed with our subsequent PRs, nothing to do.

--- a/.eslintrc
+++ b/.eslintrc
@@ -28,7 +28,10 @@
         "plugin:react/recommended",
         "plugin:react/jsx-runtime",
         "plugin:prettier/recommended",
-        "plugin:react-hooks/recommended"
+        "plugin:react-hooks/recommended",
+        "plugin:import/errors",
+        "plugin:import/warnings",
+        "plugin:import/recommended"
     ],
     "rules": {
         "no-console": 1, // Means warning
@@ -65,7 +68,30 @@
                 "varsIgnorePattern": "^_",
                 "ignoreRestSiblings": true
             }
-        ]
+        ],
+        "@typescript-eslint/consistent-type-imports": [
+            "error",
+            {
+                "prefer": "type-imports"
+            }
+        ],
+        // Import
+        "import/extensions": [
+            "error",
+            "always",
+            {
+                "json": "always",
+                "js": "always",
+                "ts": "never",
+                "ignorePackages": true
+            }
+        ],
+        "import/no-unresolved": "off",
+        "import/no-extraneous-dependencies": "error",
+        "import/no-empty-named-blocks": "error",
+        "import/no-absolute-path": "error",
+        "import/no-self-import": "error",
+        "import/newline-after-import": "error"
     },
     "overrides": [
         {
@@ -127,7 +153,9 @@
                             "attributes": false
                         }
                     }
-                ]
+                ],
+                // unnecessary when bundling
+                "import/extensions": "off"
             }
         }
     ]
