--- a/.github/workflows/integration-flows.yaml
+++ b/.github/workflows/integration-flows.yaml
@@ -7,7 +7,6 @@ on:
             - staging/**
     pull_request:
 
-
 concurrency:
     group: flows-compile--${{ github.event.pull_request.number || github.ref }}
     cancel-in-progress: true
@@ -27,23 +26,34 @@ jobs:
 
             - name: Install nango CLI
               run: |
-                # Build, install CLI and verify it can run
-                npm install
-                npm run build -w @nangohq/node -w @nangohq/shared -w nango
-                npm install -g ./packages/cli
-                NANGO_CLI_UPGRADE_MODE=ignore nango version --debug
+                  # Build, install CLI and verify it can run
+                  npm install
+                  npm run build -w @nangohq/node -w @nangohq/shared -w nango
+                  npm install -g ./packages/cli
+                  NANGO_CLI_UPGRADE_MODE=ignore nango version --debug
 
             - name: Compile with Nango
               run: |
-                set -e
-                cd integration-templates
-                for dir in */; do
-                  if [[ "$dir" != "." && "$dir" != "integration-templates/" ]]; then
-                      cd "$dir"
-                      mkdir -p nango-integrations
-                      find . -maxdepth 1 ! -name '.' ! -name 'nango-integrations' -exec mv -t nango-integrations {} +
-                      cd nango-integrations
-                      NANGO_CLI_UPGRADE_MODE=ignore nango compile
-                      cd ../../
+                  set -e
+                  cd integration-templates
+                  for dir in */; do
+                    if [[ "$dir" != "." && "$dir" != "integration-templates/" ]]; then
+                        cd "$dir"
+                        mkdir -p nango-integrations
+                        find . -maxdepth 1 ! -name '.' ! -name 'nango-integrations' -exec mv -t nango-integrations {} +
+                        cd nango-integrations
+                        NANGO_CLI_UPGRADE_MODE=ignore nango compile
+                        cd ../../
+                    fi
+                  done
+
+            - name: Make sure flows.yaml is compiled
+              run: |
+                  node ./scripts/flows.js
+
+                  REPO_DIRTY=$(git status --short)
+                  if [[ ! -z "$REPO_DIRTY" ]]; then
+                    echo -e "\r⛔️ flows.yaml hasn't been compiled, please run:"
+                    echo -e "node ./scripts/flows.js"
+                    exit 1
                   fi
-                done
