--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
         "eslint-plugin-react": "7.33.2",
         "eslint-plugin-react-hooks": "4.6.0",
         "husky": "^8.0.3",
+        "js-yaml": "4.1.0",
         "lint-staged": "15.2.2",
         "onchange": "^7.1.0",
         "prettier": "3.2.5",
